# quadroPE

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
.github/workflows/: ci.yml
app/: __init__.py  cache.py  database.py  log_store.py  metrics_store.py
app/models/: event.py  url.py  user.py
app/routes/: __init__.py  dashboard.py  events.py  fail.py  logs.py  metrics.py  prometheus.py  urls.py  users.py
app/utils/: alerts.py  events.py  logger.py
data/: urls.csv  users.csv
docs/: API.md  extended-guide.md  failure-manual.md  performance-bottleneck-report.md  root-cause-analysis.md  runbook.md  sherlock-mode.md
grafana/dashboards/: quadrope-golden-signals.json
nginx/: nginx.conf
prometheus/: prometheus.yml
reports/: test-report.html
res/: events.csv
scripts/: generate_traffic.py  load_csv.py  test_locust.py
tests/: conftest.py  test_app.py  test_database.py  test_deliberate_fail.py  test_events.py  test_graceful_failure.py  test_health.py  test_logs.py  test_unit_functions.py  test_unit_models.py  test_urls.py  test_users.py
