[project]
name = "mlh-pe-hackathon"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "faker>=33.0",
    "flask>=3.1",
    "gunicorn>=23.0",
    "peewee>=3.17",
    "psutil>=7.2.2",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "requests>=2.33.1",
    "redis>=5.0",
    "prometheus-client>=0.24.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-html>=4.2.0",
]
